# arboo

./: .gitignore  Cargo.toml
cache/: .cached-pools.csv  .cached-pools.test.csv
contracts/: arboo.sol  arboo.t.sol  foundry.toml
contracts/lib/v3-periphery/contracts/libraries/: OracleLibrary.sol
contracts/script/: flash_swap_test.sol
contracts/src/: UniswapV2FlashSwap.sol  arboo.sol  arboo_aave_uv3.sol  quoter.sol
contracts/test/: arboo.t.sol  arboo2.t.sol  v2test.t.sol
src/: lib.rs  main.rs
src/arbitrage/: evm.rs  liquidity.rs  mod.rs  quoter.rs  simple_swap_sim.rs  simulation.rs  strategy.rs  v2_3000.json
src/bytecode/: uniswapV3flashSwap.hex
src/common/: abi.rs  decodeResult.rs  env.rs  helpers.rs  logger.rs  logs.rs  mine.rs  mod.rs  pairs.rs  pools.rs  revm.rs  revmInspector.rs  transaction.rs  utils.rs
