[package]
name = "arbooo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.12.1"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
alloy-sol-types = { version = "0.7.0", default-features = false, features = [
    "std",
] }
cacache = { version = "12.0.0", default-features = false, features = [
    "tokio-runtime",
    "mmap",
] }
env_logger = "*"
portpicker = "0.1.1"
reqwest = { version = "0.12" }
revm = { git = "https://github.com/bluealloy/revm", rev = "d54bd99", features = [
    "alloydb",
] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "3edca45", features = [
    "consensus",
    "contract",
    "eips",
    "kzg",
    "network",
    "node-bindings",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "providers",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
] }
