[package]
name = "arbooo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.7.3", default-features = false, features = ["consensus", "contract", "eips", "kzg", "network", "node-bindings", "provider-http", "provider-ipc", "provider-ws", "providers", "rpc-client-ws", "rpc-client", "rpc-types-eth", "rpc-types-trace", "signers", "reqwest", "signer-local", "full"] }
anyhow = "1.0.82"
async-trait = "0.1.85"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.14.0"
serde = "1.0.217"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.26.1"
url = "2.5.0"
alloy-sol-types = { version = "0.8.19", default-features = false, features = ["json", "std"] }
cacache = { version = "13.1.0", default-features = false, features = [
    "tokio-runtime",
    "mmap",
] }
env_logger = "*"
portpicker = "0.1.1"
reqwest = { version = "0.12.12" }

revm = { version = "19.3.0", default-features = false, features = ["std", "serde", "memory_limit", "alloydb" ] }
csv = "1.3.0"
log = "0.4.21"
indicatif = "0.17.8"
home = "0.5.9"
alloy-json-abi = "0.8.19"
keccak = "0.1.5"
sha3 = "0.10.8"
eth-encode-packed = "0.1.0"
hash = "0.3.0"
alloy-primitives = "0.8.19"
lazy_static = "1.4.0"
hex = "0.4.3"
fern = { version = "0.7.1", features = ["colored"] }
chrono = "0.4.39"
mockall = "0.13.1"
